added all the verification components

--- a/src/Makefile
+++ b/src/Makefile
@@ -38,8 +38,9 @@ log:
 	less -R simulation.log
 
 clean:
-	rm -rf transcript work covReport/
-	rm dump.vcd simulation.log dma_top.log coverage.ucdb 
+	rm transcript 
+	rm -rf work #covReport
+	rm wave.vcd #simulation.log dma_top.log  
 
 clear:
 	clear
