modified the makefiles

--- a/src/Makefile
+++ b/src/Makefile
@@ -39,8 +39,8 @@ log:
 
 clean:
 	rm transcript 
-	rm -rf work #covReport
-	rm wave.vcd #simulation.log dma_top.log  
+	rm -rf work covReport
+	rm wave.vcd simulation.log dma_top.log coverage.ucdb 
 
 clear:
 	clear
